Edit Bill sys Controller
