# backend/controllers/PaytypeController.go
@@ -6,6 +6,7 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/team10/app/ent"
+	"github.com/team10/app/ent/paytype"
 )
 
 // PaytypeController defines the struct for the paytype controller
@@ -14,6 +15,38 @@ type PaytypeController struct {
 	router gin.IRouter
 }
 
+// GetPaytype handles GET requests to retrieve a paytype entity
+// @Summary Get a paytype entity by ID
+// @Description get paytype by ID
+// @ID get-paytype
+// @Produce  json
+// @Param id path int true "Paytype ID"
+// @Success 200 {object} ent.Paytype
+// @Failure 400 {object} gin.H
+// @Failure 404 {object} gin.H
+// @Failure 500 {object} gin.H
+// @Router /paytype/{id} [get]
+func (ctl *PaytypeController) GetPaytype(c *gin.Context) {
+	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
+	if err != nil {
+		c.JSON(400, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+	u, err := ctl.client.Paytype.
+		Query().
+		Where(paytype.IDEQ(int(id))).
+		Only(context.Background())
+	if err != nil {
+		c.JSON(404, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	c.JSON(200, u)
+}
 // ListPaytype handles request to get a list of paytype entities
 // @Summary List paytype entities
 // @Description list paytype entities
@@ -24,7 +57,7 @@ type PaytypeController struct {
 // @Success 200 {array} ent.Paytype
 // @Failure 400 {object} gin.H
 // @Failure 500 {object} gin.H
-// @Router /paytype [get]
+// @Router /paytypes [get]
 func (ctl *PaytypeController) ListPaytype(c *gin.Context) {
 	limitQuery := c.Query("limit")
 	limit := 10
@@ -34,7 +67,6 @@ func (ctl *PaytypeController) ListPaytype(c *gin.Context) {
 			limit = int(limit64)
 		}
 	}
-
 	offsetQuery := c.Query("offset")
 	offset := 0
 	if offsetQuery != "" {
@@ -43,7 +75,6 @@ func (ctl *PaytypeController) ListPaytype(c *gin.Context) {
 			offset = int(offset64)
 		}
 	}
-
 	paytypes, err := ctl.client.Paytype.
 		Query().
 		Limit(limit).
@@ -74,5 +105,7 @@ func (ctl *PaytypeController) register() {
 	paytypes := ctl.router.Group("/paytypes")
 
 	paytypes.GET("", ctl.ListPaytype)
+	paytypes.GET(":id", ctl.GetPaytype)
+
 
 }
