# backend/docs/swagger.json
@@ -801,7 +801,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/ent.Bill"
+                            "$ref": "#/definitions/controllers.Bill"
                         }
                     }
                 ],
@@ -1141,7 +1141,7 @@
                 }
             }
         },
-        "/financier": {
+        "/financiers": {
             "get": {
                 "description": "list financier entities",
                 "produces": [
@@ -1188,7 +1188,7 @@
                 }
             }
         },
-        "/financier/{id}": {
+        "/financiers/{id}": {
             "get": {
                 "description": "get financier by ID",
                 "produces": [
@@ -2414,7 +2414,52 @@
                 }
             }
         },
-        "/paytype": {
+        "/paytype/{id}": {
+            "get": {
+                "description": "get paytype by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get a paytype entity by ID",
+                "operationId": "get-paytype",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Paytype ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ent.Paytype"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            }
+        },
+        "/paytypes": {
             "get": {
                 "description": "list paytype entities",
                 "produces": [
@@ -3141,6 +3186,26 @@
         }
     },
     "definitions": {
+        "controllers.Bill": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "string"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "financier": {
+                    "type": "integer"
+                },
+                "paytype": {
+                    "type": "integer"
+                },
+                "unpaybill": {
+                    "type": "integer"
+                }
+            }
+        },
         "controllers.Historytaking": {
             "type": "object",
             "properties": {
